--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <a href="https://douyin.com" target="_blank">别学了，刷会吧 </a>
     <br>
-    <a href="https://bighorncow.github.io/" target="_blank">来看崔江锐</a>
+    <a href="https://bighorncow.github.io/" target="_blank" style="background-color: rgb(249, 92, 7);">私密勿点</a>
     <hr>
 
 </body>
